--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -209,7 +209,7 @@ spec:
       nextcloud-config:
         enabled: true
         data:
-          extra.config.php: |
+          extra-config-php: |
             <?php
               $CONFIG = array(
                 'backgroundjobs_mode' => 'cron',
@@ -606,14 +606,32 @@ spec:
               - path: /opt/cool
                 subPath: cool
                 readOnly: false
-      nginx-config:
+      extra-config-php:
         type: configMap
-        name: nextcloud-nginx-config
+        name: nextcloud-config
         advancedMounts:
           nextcloud:
-            nginx:
-              - path: /etc/nginx/nginx.conf
-                subPath: nginx.conf
+            nextcloud:
+              - path: /var/www/html/config/extra.config.php
+                subPath: extra.config.php
+                readOnly: true
+      opcache-recommended-ini:
+        type: configMap
+        name: nextcloud-config
+        advancedMounts:
+          nextcloud:
+            nextcloud:
+              - path: /usr/local/etc/php/conf.d/opcache-recommended.ini
+                subPath: opcache-recommended.ini
+                readOnly: true
+      redis-session-ini:
+        type: configMap
+        name: nextcloud-config
+        advancedMounts:
+          nextcloud:
+            nextcloud:
+              - path: /usr/local/etc/php/conf.d/redis-session.ini
+                subPath: redis-session.ini
                 readOnly: true
       uploadlimit-ini:
         type: configMap
@@ -633,30 +651,12 @@ spec:
               - path: /usr/local/etc/php-fpm.d/www.conf
                 subPath: www.conf
                 readOnly: true
-      opcache-recommended-ini:
+      nginx-config:
         type: configMap
-        name: nextcloud-config
+        name: nginx-config
         advancedMounts:
           nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php/conf.d/opcache-recommended.ini
-                subPath: opcache-recommended.ini
-                readOnly: true
-      nextcloud-config:
-        type: configMap
-        name: nextcloud-config
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /var/www/html/config/extra.config.php
-                subPath: extra.config.php
-                readOnly: true
-      redis-session-ini:
-        type: configMap
-        name: nextcloud-config
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php/conf.d/redis-session.ini
-                subPath: redis-session.ini
+            nginx:
+              - path: /etc/nginx/nginx.conf
+                subPath: nginx.conf
                 readOnly: true
