--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -608,7 +608,7 @@ spec:
                 readOnly: false
       extra-config-php:
         type: configMap
-        name: nextcloud-config
+        name: &onfigMap nextcloud-nextcloud-config
         advancedMounts:
           nextcloud:
             nextcloud:
@@ -617,7 +617,7 @@ spec:
                 readOnly: true
       opcache-recommended-ini:
         type: configMap
-        name: nextcloud-config
+        name: *onfigMap
         advancedMounts:
           nextcloud:
             nextcloud:
@@ -626,7 +626,7 @@ spec:
                 readOnly: true
       redis-session-ini:
         type: configMap
-        name: nextcloud-config
+        name: *onfigMap
         advancedMounts:
           nextcloud:
             nextcloud:
@@ -635,7 +635,7 @@ spec:
                 readOnly: true
       uploadlimit-ini:
         type: configMap
-        name: nextcloud-config
+        name: *onfigMap
         advancedMounts:
           nextcloud:
             nextcloud:
@@ -644,7 +644,7 @@ spec:
                 readOnly: true
       www-conf:
         type: configMap
-        name: nextcloud-config
+        name: *onfigMap
         advancedMounts:
           nextcloud:
             nextcloud:
@@ -653,7 +653,7 @@ spec:
                 readOnly: true
       nginx-config:
         type: configMap
-        name: nginx-config
+        name: nextcloud-nginx-config
         advancedMounts:
           nextcloud:
             nginx:
