--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -16,8 +16,8 @@ spec:
         COLLABORA_USERNAME: "{{ .COLLABORA_USERNAME }}"
         COLLABORA_PASSWORD: "{{ .COLLABORA_PASSWORD }}"
         # Nextcloud
-        ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
-        ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
+        NEXTCLOUD_ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
+        NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
         METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
         POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         POSTGRES_DB: &dbName nextcloud
