--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -595,61 +595,62 @@ spec:
               - path: /var/www/html
                 subPath: config
                 readOnly: false
-      collabora:
-        existingClaim: collabora
-        advancedMounts:
-          nextcloud:
-            collabora:
-              - path: /var/cache/coolwsd
-                subPath: coolwsd
-                readOnly: false
-              - path: /opt/cool
-                subPath: cool
-                readOnly: false
-      extra-config-php:
-        type: configMap
-        name: &onfigMap nextcloud-nextcloud-config
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /var/www/html/config
-                subPath: extra.config.php
-                readOnly: true
-      opcache-recommended-ini:
-        type: configMap
-        name: *onfigMap
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php/conf.d/opcache-recommended.ini
-                subPath: opcache-recommended.ini
-                readOnly: true
-      redis-session-ini:
-        type: configMap
-        name: *onfigMap
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php/conf.d/redis-session.ini
-                subPath: redis-session.ini
-                readOnly: true
-      uploadlimit-ini:
-        type: configMap
-        name: *onfigMap
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php-fpm.d/uploadLimit.ini
-                subPath: uploadLimit.ini
-                readOnly: true
-      www-conf:
-        type: configMap
-        name: *onfigMap
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /usr/local/etc/php-fpm.d/www.conf
-                readOnly: true
+      # collabora:
+      #   existingClaim: collabora
+      #   advancedMounts:
+      #     nextcloud:
+      #       collabora:
+      #         - path: /var/cache/coolwsd
+      #           subPath: coolwsd
+      #           readOnly: false
+      #         - path: /opt/cool
+      #           subPath: cool
+      #           readOnly: false
+      # extra-config-php:
+      #   type: configMap
+      #   name: &onfigMap nextcloud-nextcloud-config
+      #   advancedMounts:
+      #     nextcloud:
+      #       nextcloud:
+      #         - path: /var/www/html/config
+      #           subPath: extra.config.php
+      #           readOnly: true
+      # opcache-recommended-ini:
+      #   type: configMap
+      #   name: *onfigMap
+      #   advancedMounts:
+      #     nextcloud:
+      #       nextcloud:
+      #         - path: /usr/local/etc/php/conf.d/opcache-recommended.ini
+      #           subPath: opcache-recommended.ini
+      #           readOnly: true
+      # redis-session-ini:
+      #   type: configMap
+      #   name: *onfigMap
+      #   advancedMounts:
+      #     nextcloud:
+      #       nextcloud:
+      #         - path: /usr/local/etc/php/conf.d/redis-session.ini
+      #           subPath: redis-session.ini
+      #           readOnly: true
+      # uploadlimit-ini:
+      #   type: configMap
+      #   name: *onfigMap
+      #   advancedMounts:
+      #     nextcloud:
+      #       nextcloud:
+      #         - path: /usr/local/etc/php-fpm.d/uploadLimit.ini
+      #           subPath: uploadLimit.ini
+      #           readOnly: true
+      # www-conf:
+      #   type: configMap
+      #   name: *onfigMap
+      #   advancedMounts:
+      #     nextcloud:
+      #       nextcloud:
+      #         - path: /usr/local/etc/php-fpm.d/www.conf
+      #           subPath: www.conf
+      #           readOnly: true
       nginx-config:
         type: configMap
         name: nextcloud-nginx-config
