--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -568,12 +568,10 @@ spec:
       extra-config-php:
         type: configMap
         name: &configMap nextcloud-app-config
-        advancedMounts:
-          nextcloud:
-            nextcloud:
-              - path: /var/www/html/config/extra.config.php
-                subPath: extra.config.php
-                readOnly: true
+        globalMounts:
+          - path: /var/www/html/config/extra.config.php
+            subPath: extra.config.php
+            readOnly: true
       # opcache-recommended-ini:
       #   type: configMap
       #   name: *configMap
