fix(nextcloud): modify configMap mount

--- a/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
@@ -7,3 +7,9 @@ resources:
   - ./helmrelease.yaml
   # - ./job.yaml
   - ./pvc.yaml
+configMapGenerator:
+  - name: nextcloud-app-config
+    files:
+      - extra.config.php=./resources/extra.config.php
+generatorOptions:
+  disableNameSuffixHash: true
