--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -205,182 +205,6 @@ spec:
         tls:
           - hosts:
               - *host
-    configMaps:
-      nginx-config:
-        enabled: true
-        data:
-          nginx.conf: |
-            worker_processes auto;
-
-            error_log  /var/log/nginx/error.log warn;
-            pid        /tmp/nginx.pid;
-
-            events {
-                worker_connections 2048;
-                multi_accept on;
-                use epoll;
-            }
-
-            http {
-                proxy_temp_path /tmp/proxy_temp;
-                client_body_temp_path /tmp/client_temp;
-                fastcgi_temp_path /tmp/fastcgi_temp;
-                uwsgi_temp_path /tmp/uwsgi_temp;
-                scgi_temp_path /tmp/scgi_temp;
-
-                include       /etc/nginx/mime.types;
-                default_type  application/octet-stream;
-
-                sendfile on;
-                tcp_nopush on;
-                tcp_nodelay on;
-                keepalive_timeout 65;
-                reset_timedout_connection on;
-                server_tokens off;
-
-                # Rate limiting
-                limit_req_zone $binary_remote_addr zone=NextcloudRateLimit:10m rate=2r/s;
-
-                upstream php-handler {
-                    server 127.0.0.1:9000;
-                }
-
-                types {
-                    text/javascript mjs;
-                }
-
-                server {
-                    listen 8080;
-
-                    # Root directory
-                    root /var/www/html;
-
-                    # Security headers
-                    add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;" always;
-                    add_header Permissions-Policy "interest-cohort=()";
-                    add_header Referrer-Policy "no-referrer" always;
-                    add_header X-Content-Type-Options "nosniff" always;
-                    add_header X-Download-Options "noopen" always;
-                    add_header X-Frame-Options "SAMEORIGIN" always;
-                    add_header X-Permitted-Cross-Domain-Policies "none" always;
-                    add_header X-Robots-Tag "noindex, nofollow" always;
-                    add_header X-XSS-Protection "1; mode=block" always;
-
-                    # Remove X-Powered-By
-                    fastcgi_hide_header X-Powered-By;
-
-                    # Proxy headers
-                    proxy_set_header X-Forwarded-Host $host;
-                    proxy_set_header X-Forwarded-Proto $scheme;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header Host $host;
-
-                    # Path index
-                    index index.php index.html /index.php$request_uri;
-
-                    # Client upload limits
-                    client_max_body_size 10G;
-                    client_body_timeout 3600s;
-                    client_body_buffer_size 512k;
-                    fastcgi_buffers 64 4K;
-
-                    # Gzip compression
-                    gzip on;
-                    gzip_vary on;
-                    gzip_comp_level 4;
-                    gzip_min_length 256;
-                    gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
-                    gzip_types application/atom+xml text/javascript application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/wasm application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
-
-                    # Microsoft DAV client rule
-                    location = / {
-                        if ($http_user_agent ~ ^DavClnt) {
-                            return 302 /remote.php/webdav/$is_args$args;
-                        }
-                    }
-
-                    # Robots.txt
-                    location = /robots.txt {
-                        allow all;
-                        log_not_found off;
-                        access_log off;
-                    }
-
-                    # Well-known URLs
-                    location ^~ /.well-known {
-                        location = /.well-known/carddav { return 301 /remote.php/dav/; }
-                        location = /.well-known/caldav { return 301 /remote.php/dav/; }
-                        location /.well-known/acme-challenge { try_files $uri $uri/ =404; }
-                        location /.well-known/pki-validation { try_files $uri $uri/ =404; }
-                        return 301 /index.php$request_uri;
-                    }
-
-                    # Deny access to sensitive directories
-                    location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)(?:$|/) { return 404; }
-                    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) { return 404; }
-
-                    # PHP handling
-                    location ~ \.php(?:$|/) {
-                        rewrite ^/(?!index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+|.+\/richdocumentscode\/proxy) /index.php$request_uri;
-
-                        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-                        set $path_info $fastcgi_path_info;
-
-                        try_files $fastcgi_script_name =404;
-
-                        include fastcgi_params;
-                        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                        fastcgi_param PATH_INFO $path_info;
-                        fastcgi_param HTTPS on;
-
-                        fastcgi_param modHeadersAvailable true;  # Avoid sending the security headers twice
-                        fastcgi_param front_controller_active true;
-
-                        fastcgi_pass php-handler;
-
-                        fastcgi_intercept_errors on;
-                        fastcgi_request_buffering off;
-                        fastcgi_read_timeout 3600;
-                        fastcgi_send_timeout 3600;
-                        fastcgi_connect_timeout 3600;
-                        fastcgi_max_temp_file_size 0;
-                    }
-
-                    # Static files
-                    location ~ \.(?:css|js|mjs|svg|gif|ico|jpg|png|webp|wasm|tflite|map|ogg|flac)$ {
-                        try_files $uri /index.php$request_uri;
-                        add_header Cache-Control "public, max-age=15768000, immutable";
-                        expires 6M;
-                        access_log off;
-                    }
-
-                    # Font files
-                    location ~ \.(otf|woff2?)$ {
-                        try_files $uri /index.php$request_uri;
-                        expires 7d;
-                        access_log off;
-                    }
-
-                    # Remote requests
-                    location /remote {
-                        return 301 /remote.php$request_uri;
-                    }
-
-                    # Rate limit for login
-                    location /login {
-                        limit_req zone=NextcloudRateLimit burst=5 nodelay;
-                        limit_req_status 429;
-                        try_files $uri $uri/ /index.php$request_uri;
-                    }
-
-                    # Default fallback
-                    location / {
-                        try_files $uri $uri/ /index.php$request_uri;
-                    }
-
-
-                }
-            }
     persistence:
       config:
         existingClaim: nextcloud-config
@@ -460,12 +284,10 @@ spec:
       #         - path: /usr/local/etc/php-fpm.d/www.conf
       #           subPath: www.conf
       #           readOnly: true
-      nginx-config:
+      nextcloud-nginx-config:
         type: configMap
-        name: nextcloud-nginx-config
-        advancedMounts:
-          nextcloud:
-            nginx:
-              - path: /etc/nginx/nginx.conf
-                subPath: nginx.conf
-                readOnly: true
+        name: &configMap nextcloud-nginx-config
+        globalMounts:
+          - path: /etc/nginx/nginx.conf
+            subPath: nginx.conf
+            readOnly: true
