--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -162,16 +162,16 @@ spec:
           #     runAsUser: &uidNobody 65534
           #     runAsGroup: *uidNobody
           #     fsGroup: *uidNobody
-        initContainers:
-          init-chmod-pvc:
-            image:
-              repository: docker.io/library/alpine
-              tag: 3.21.2
-            command: ["/bin/sh"]
-            args: ["-c", "mkdir -p /var/www/html/config && chmod 0770 /var/www/html/config && chown 5000:5000 /var/www/html/config && mkdir -p /usr/local/etc/php/conf.d && chmod 0770 /usr/local/etc/php/conf.d && chown 5000:5000 /usr/local/etc/php/conf.d"]
-            securityContext:
-              runAsUser: 0
-              runAsGroup: 0
+        # initContainers:
+        #   init-chmod-pvc:
+        #     image:
+        #       repository: docker.io/library/alpine
+        #       tag: 3.21.2
+        #     command: ["/bin/sh"]
+        #     args: ["-c", "mkdir -p /var/www/html/config && chmod 0770 /var/www/html/config && chown 5000:5000 /var/www/html/config && mkdir -p /usr/local/etc/php/conf.d && chmod 0770 /usr/local/etc/php/conf.d && chown 5000:5000 /usr/local/etc/php/conf.d"]
+        #     securityContext:
+        #       runAsUser: 0
+        #       runAsGroup: 0
     service:
       nginx:
         controller: *app
