--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -248,6 +248,9 @@ spec:
           - path: /var/www/html/config/extra.config.php
             subPath: extra.config.php
             readOnly: true
+          - path: /usr/local/etc/php/conf.d/opcache-recommended.ini
+            subPath: opcache-recommended.ini
+            readOnly: true
       # opcache-recommended-ini:
       #   type: configMap
       #   name: *configMap
