--- a/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
@@ -13,6 +13,7 @@ configMapGenerator:
       - extra.config.php=./resources/extra.config.php
       - opcache-recommended.ini=./resources/opcache-recommended.ini
       - redis-session.ini=./resources/redis-session.ini
+      - uploadLimit.ini=./resources/uploadLimit.ini
   - name: nextcloud-nginx-config
     files:
       - nginx.conf=./resources/nginx.conf
