--- a/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
@@ -14,6 +14,7 @@ configMapGenerator:
       - opcache-recommended.ini=./resources/opcache-recommended.ini
       - redis-session.ini=./resources/redis-session.ini
       - uploadLimit.ini=./resources/uploadLimit.ini
+      - www.conf=./resources/www.conf
   - name: nextcloud-nginx-config
     files:
       - nginx.conf=./resources/nginx.conf
