fix(nextcloud): modify configMap structure

--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -30,7 +30,7 @@ spec:
         S3_ACCESS_KEY: "{{ .S3_ACCESS_KEY }}"
         S3_SECRET_KEY: "{{ .S3_SECRET_KEY }}"
         # Redis
-        REDIS_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
+        REDIS_HOST_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
         # SMTP
         SMTP_HOST: "{{ .SMTP_HOST }}"
         # Postgres Init
