--- a/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud-data
+  name: nextcloud-app-data
 spec:
   accessModes: ["ReadWriteOnce"]
   storageClassName: truenas-ssd-nfs
@@ -13,7 +13,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud-config
+  name: nextcloud-user-data
 spec:
   accessModes: ["ReadWriteOnce"]
   storageClassName: truenas-ssd-nfs
