--- a/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
+++ b/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
@@ -121,7 +121,7 @@ http {
             fastcgi_param PATH_INFO $path_info;
             fastcgi_param HTTPS on;
 
-            fastcgi_param modHeadersAvailable true;  # Avoid sending the security headers twice
+            fastcgi_param modHeadersAvailable true;  # Avoid sending the security headers twice.
             fastcgi_param front_controller_active true;
 
             fastcgi_pass php-handler;
