--- a/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
+++ b/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
@@ -166,6 +166,46 @@ http {
             try_files $uri $uri/ /index.php$request_uri;
         }
 
+        # Collabora Online
+        location ^~ /browser {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Host $http_host;
+        }
+        location ^~ /hosting/discovery {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Host $http_host;
+        }
+        location ^~ /hosting/capabilities {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Host $http_host;
+        }
+        location ~ ^/cool/(.*)/ws$ {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $http_host;
+            proxy_read_timeout 36000s;
+        }
+        location ~ ^/(c|l)ool {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Host $http_host;
+        }
+        location ^~ /cool/adminws {
+            proxy_pass http://nextcloud-collabora.self-hosted.svc.cluster.local:9980;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $http_host;
+            proxy_read_timeout 36000s;
+        }
 
+        # Nextcloud Whiteboard
+        location /whiteboard/ {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_pass http://nextcloud-whiteboard.self-hosted.svc.cluster.local:3002/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 }
