--- a/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
+++ b/kubernetes/apps/self-hosted/nextcloud/app/resources/nginx.conf
@@ -199,13 +199,13 @@ http {
         }
 
         # Nextcloud Whiteboard
-        location /whiteboard/ {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_pass http://nextcloud-whiteboard.self-hosted.svc.cluster.local:3002/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
+        ; location /whiteboard/ {
+        ;     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        ;     proxy_set_header Host $host;
+        ;     proxy_pass http://nextcloud-whiteboard.self-hosted.svc.cluster.local:3002/;
+        ;     proxy_http_version 1.1;
+        ;     proxy_set_header Upgrade $http_upgrade;
+        ;     proxy_set_header Connection "upgrade";
+        ; }
     }
 }
