fix(nextcloud): add init-db container

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -43,6 +43,23 @@ spec:
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          init-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            envFrom:
+              - secretRef:
+                  name: *app
+          init-chmod-pvc:
+            image:
+              repository: docker.io/library/alpine
+              tag: 3.21.2
+            command: ["/bin/sh"]
+            args: ["-c", "mkdir -p /var/www/html/config && chmod 0770 /var/www/html/config && chown 5000:5000 /var/www/html/config && mkdir -p /usr/local/etc/php/conf.d && chmod 0770 /usr/local/etc/php/conf.d && chown 5000:5000 /usr/local/etc/php/conf.d"]
+            securityContext:
+              runAsUser: 0
+              runAsGroup: 0
         containers:
           nextcloud:
             image:
@@ -164,16 +181,6 @@ spec:
           #     runAsUser: &uidNobody 65534
           #     runAsGroup: *uidNobody
           #     fsGroup: *uidNobody
-        initContainers:
-          init-chmod-pvc:
-            image:
-              repository: docker.io/library/alpine
-              tag: 3.21.2
-            command: ["/bin/sh"]
-            args: ["-c", "mkdir -p /var/www/html/config && chmod 0770 /var/www/html/config && chown 5000:5000 /var/www/html/config && mkdir -p /usr/local/etc/php/conf.d && chmod 0770 /usr/local/etc/php/conf.d && chown 5000:5000 /usr/local/etc/php/conf.d"]
-            securityContext:
-              runAsUser: 0
-              runAsGroup: 0
     service:
       nginx:
         controller: *app
