--- a/kubernetes/apps/self-hosted/nextcloud/app/resources/redis-session.ini
+++ b/kubernetes/apps/self-hosted/nextcloud/app/resources/redis-session.ini
@@ -1,5 +1,5 @@
 session.save_handler = redis
-session.save_path = "tcp://$${REDIS_HOST}:$${REDIS_HOST_PORT}?database=$${REDIS_DB_INDEX}?auth=$${REDIS_HOST_PASSWORD}"
+session.save_path = "tcp://$${REDIS_HOST}:6379?database=$${REDIS_DB_INDEX}$${REDIS_USER_AUTH}&auth[]=$${REDIS_HOST_PASSWORD}"
 redis.session.locking_enabled = 1
 redis.session.lock_retries = -1
 redis.session.lock_wait_time = 10000
