--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -175,6 +175,11 @@ spec:
                     key: WHITEBOARD_JWT_SECRET_KEY
               - name: STORAGE_STRATEGY
                 value: "redis"
+              - name: REDIS_HOST_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: *app
+                    key: REDIS_HOST_PASSWORD
               - name: REDIS_URL
                 value: "redis://:${REDIS_HOST_PASSWORD}@dragonfly.database.svc.cluster.local:6379/6"
             securityContext:
