fix(nextcloud): enable jobs

--- a/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  # - ./job.yaml
+  - ./job.yaml
   - ./pvc.yaml
 configMapGenerator:
   - name: nextcloud-app-config
