--- a/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
@@ -12,10 +12,10 @@ spec:
         command: ["/bin/sh", "-c"]
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ upgrade && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ db:add-missing-columns && php /var/www/html/occ db:add-missing-primary-keys && php /var/www/html/occ db:convert-filecache-bigint && php /var/www/html/occ maintenance:repair --include-expensive"]
         volumeMounts:
-        - name: config
+        - name: app-data
           mountPath: /var/www/html
           subPath: config
-        - name: data
+        - name: user-data
           mountPath: /data
           subPath: data
       restartPolicy: OnFailure
@@ -25,12 +25,12 @@ spec:
         fsGroup: *uid
       ttlSecondsAfterFinished: 3600
       volumes:
-      - name: config
+      - name: app-data
         persistentVolumeClaim:
-          claimName: nextcloud-config
-      - name: data
+          claimName: nextcloud-app-data
+      - name: user-data
         persistentVolumeClaim:
-          claimName: nextcloud-data
+          claimName: nextcloud-user-data
 ---
 apiVersion: batch/v1
 kind: Job
@@ -45,10 +45,10 @@ spec:
         command: ["/bin/sh", "-c"]
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ app:disable firstrunwizard && php /var/www/html/occ app:disable support && php /var/www/html/occ app:enable admin_audit && php /var/www/html/occ app:enable files_pdfviewer && php /var/www/html/occ app:enable groupfolders && php /var/www/html/occ app:enable notes && php /var/www/html/occ app:install richdocuments && php /var/www/html/occ app:install whiteboard && php /var/www/html/occ app:install deck && php /var/www/html/occ app:install tables && php /var/www/html/occ app:install forms && php /var/www/html/occ app:install quota_warning"]
         volumeMounts:
-        - name: config
+        - name: app-data
           mountPath: /var/www/html
           subPath: config
-        - name: data
+        - name: user-data
           mountPath: /data
           subPath: data
       restartPolicy: OnFailure
@@ -58,12 +58,12 @@ spec:
         fsGroup: *uid
       ttlSecondsAfterFinished: 3600
       volumes:
-      - name: config
+      - name: app-data
         persistentVolumeClaim:
-          claimName: nextcloud-config
-      - name: data
+          claimName: nextcloud-app-data
+      - name: user-data
         persistentVolumeClaim:
-          claimName: nextcloud-data
+          claimName: nextcloud-user-data
 ---
 apiVersion: batch/v1
 kind: Job
@@ -92,10 +92,10 @@ spec:
             php /var/www/html/occ config:app:set whiteboard jwt_secret_key --value="${WHITEBOARD_JWT_SECRET_KEY}";
             echo "Whiteboard configuration completed.";
         volumeMounts:
-        - name: config
+        - name: app-data
           mountPath: /var/www/html
           subPath: config
-        - name: data
+        - name: user-data
           mountPath: /data
           subPath: data
       restartPolicy: OnFailure
@@ -105,12 +105,12 @@ spec:
         fsGroup: *uid
       ttlSecondsAfterFinished: 3600
       volumes:
-      - name: config
+      - name: app-data
         persistentVolumeClaim:
-          claimName: nextcloud-config
-      - name: data
+          claimName: nextcloud-app-data
+      - name: user-data
         persistentVolumeClaim:
-          claimName: nextcloud-data
+          claimName: nextcloud-user-data
 ---
 apiVersion: batch/v1
 kind: Job
@@ -139,10 +139,10 @@ spec:
             php /var/www/html/occ richdocuments:activate-config
             echo "Nextcloud Office configuration completed.";
         volumeMounts:
-        - name: config
+        - name: app-data
           mountPath: /var/www/html
           subPath: config
-        - name: data
+        - name: user-data
           mountPath: /data
           subPath: data
       restartPolicy: OnFailure
@@ -152,12 +152,12 @@ spec:
         fsGroup: *uid
       ttlSecondsAfterFinished: 3600
       volumes:
-      - name: config
+      - name: app-data
         persistentVolumeClaim:
-          claimName: nextcloud-config
-      - name: data
+          claimName: nextcloud-app-data
+      - name: user-data
         persistentVolumeClaim:
-          claimName: nextcloud-data
+          claimName: nextcloud-user-data
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -185,10 +185,10 @@ spec:
                     echo "cron.php not found, skipping execution";
                   fi
               volumeMounts:
-                - name: config
+                - name: app-data
                   mountPath: /var/www/html
                   subPath: config
-                - name: data
+                - name: user-data
                   mountPath: /data
                   subPath: data
           restartPolicy: OnFailure
@@ -197,12 +197,12 @@ spec:
             runAsGroup: *uid
             fsGroup: *uid
           volumes:
-            - name: config
+            - name: app-data
               persistentVolumeClaim:
-                claimName: nextcloud-config
-            - name: data
+                claimName: nextcloud-app-data
+            - name: user-data
               persistentVolumeClaim:
-                claimName: nextcloud-data
+                claimName: nextcloud-user-data
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -221,10 +221,10 @@ spec:
             command: ["/bin/sh", "-c"]
             args: ["php /var/www/html/occ maintenance:mode --on && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ maintenance:mode --off"]
             volumeMounts:
-            - name: config
+            - name: app-data
               mountPath: /var/www/html
               subPath: config
-            - name: data
+            - name: user-data
               mountPath: /data
               subPath: data
           restartPolicy: OnFailure
@@ -233,9 +233,9 @@ spec:
             runAsGroup: *uid
             fsGroup: *uid
           volumes:
-          - name: config
+          - name: app-data
             persistentVolumeClaim:
-              claimName: nextcloud-config
-          - name: data
+              claimName: nextcloud-app-data
+          - name: user-data
             persistentVolumeClaim:
-              claimName: nextcloud-data
+              claimName: nextcloud-user-data
