--- a/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
                     name: *app
                     key: COLLABORA_PASSWORD
               - name: extra_params
-                value: "--o:ssl.enable=false --o:ssl.termination=true --o:mount_jail_tree=false --o:logging.level=warning --o:home_mode.enable=true --o:security.seccomp=true --o:remote_font_config.url=https://nextcloud.${SECRET_DOMAIN}/apps/richdocuments/settings/fonts.json --o:net.post_allow.host[0]=.+"
+                value: "--o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN}"
               - name: dictionaries
                 value: "de_DE en_GB en_US es_ES fr_FR"
               - name: server_name
@@ -68,18 +68,18 @@ spec:
         ports:
           http:
             port: 9980
-    ingress:
-      app:
-        className: internal
-        annotations:
-          nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_WOPISrc"
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-        tls:
-          - hosts:
-              - *host
+    # ingress:
+    #   app:
+    #     className: internal
+    #     annotations:
+    #       nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_WOPISrc"
+    #     hosts:
+    #       - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+    #         paths:
+    #           - path: /
+    #             service:
+    #               identifier: app
+    #               port: http
+    #     tls:
+    #       - hosts:
+    #           - *host
