--- a/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
@@ -72,6 +72,9 @@ spec:
     #   app:
     #     className: internal
     #     annotations:
+    #       nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    #       nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    #       nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     #       nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_WOPISrc"
     #     hosts:
     #       - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
