--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         COLLABORA_PASSWORD: "{{ .COLLABORA_PASSWORD }}"
         # Nextcloud
         NEXTCLOUD_ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
-        NEXTCLOUD_ADMIN_PASS: "{{ .NEXTCLOUD_ADMIN_PASS }}"
+        NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
         METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
         POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         POSTGRES_DB: &dbName nextcloud
@@ -25,11 +25,12 @@ spec:
         POSTGRES_PASSWORD: &dbPass "{{ .NEXTCLOUD_POSTGRES_PASSWORD }}"
         SMTP_USERNAME: "{{ .NEXTCLOUD_SMTP_USERNAME }}"
         SMTP_PASSWORD: "{{ .NEXTCLOUD_SMTP_PASSWORD }}"
+        WHITEBOARD_JWT_SECRET_KEY: "{{ .NEXTCLOUD_WHITEBOARD_JWT_SECRET_KEY }}"
         # MinIO
         S3_ACCESS_KEY: "{{ .S3_ACCESS_KEY }}"
         S3_SECRET_KEY: "{{ .S3_SECRET_KEY }}"
         # Redis
-        REDIS_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
+        REDIS_HOST_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
         # SMTP
         SMTP_HOST: "{{ .SMTP_HOST }}"
         # Postgres Init
