--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -16,5 +16,5 @@ resources:
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
   # - ./nextcloud/ks.yaml
-  # - ./nextcloud-helm/ks.yaml
+  - ./nextcloud-helm/ks.yaml
   - ./searxng/ks.yaml
