fix(nextcloud): correct secret

--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: *app
-              key: REDIS_PASSWORD
+              key: REDIS_HOST_PASSWORD
         - name: TZ
           value: "${CONFIG_TIMEZONE}"
       existingSecret:
